# secure-image-melange-apko

./: .gitignore  Dockerfile.dev  apko.yaml  build.sh  melange.yaml  pyproject.toml  requirements.txt  scan.sh  skaffold.yaml  steps.txt
charts/: Chart.yaml  values.yaml
charts/templates/: deployment.yaml  service.yaml
k8s/: deployment-dev.yaml
src/: main.py
src/app/: main.py
