[project]
name = "Sample-Fastapi-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.11"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "structlog>=25.5.0"
]
